fixed code and unit tests for slight dependency change between web app and agent

--- a/apps/web_app/templates/recommendations.html
+++ b/apps/web_app/templates/recommendations.html
@@ -6,5 +6,6 @@
 	<body>
 		<h2>Based on your grocery list, here are my recommendations:</h2>
 		{{ products|safe }}
+         <p/><a href="/">Back to grocery list uploader</a>
 	</body>
 </html>
